<resources>
    <string name="app_name">TowinApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="police">Police</string>
    <string name="zonal_officer">Zonal Officer</string>
    <string name="title_activity_police_home">PoliceHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_zonal_officer_home">ZonalOfficerHomeActivity</string>
    <string name="number">Vehicle Number</string>
    <string name="towing_area">Towing Area</string>
    <string name="zonal">Select Zonal</string>
    <string name="vehicle_type">Select Vehicle Type</string>
    <string name="add">Add</string>
    <string name="clickPic">Click Pic</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="unique_challan">Unique Challan</string>
    <string name="fine_amount">Fine Amount</string>
    <string name="status">Verify Status</string>
    <string name="search">Search</string>
    <string name="document">Document</string>
    <string name="person">Person</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="extraamount">Extra Amount</string>
    <string name="reasonAmount">Reason for extra amount</string>


    <string-array name="vehicleType">
        <item>Four Wheeler</item>
        <item>Two Wheeler</item>
    </string-array>
</resources>
